exercise/force-app/main/default/objects/Case/fields/Case_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_URL__c</fullName>
    <formula>&apos;/one/one.app?#/sObject/&apos; + Id + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case URL</label>
    <type>Text</type>
</CustomField>