exercise/force-app/main/default/objects/Case/fields/Follow_Case__c.field-meta.xml
<CustomField>
    <fullName>Follow_Case__c</fullName>
    <formula>HYPERLINK(&apos;/apex/FollowAction?recordId=&apos;+Id , &apos;Follow Case&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Case</label>
    <type>Text</type>
</CustomField>