exercise/force-app/main/default/objects/Case/fields/Priority_Color__c.field-meta.xml
<CustomField>
    <fullName>Priority_Color__c</fullName>
    <formula>IMAGE( 
CASE( Priority, 
&quot;Medium&quot;, &quot;/resource/yellow&quot;,
&quot;High&quot;, &quot;/resource/red&quot;,
&quot;/resource/green&quot;),
&quot;Priority Color&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Color</label>
    <type>Text</type>
</CustomField>