exercise/force-app/main/default/objects/Case/fields/User_URL__c.field-meta.xml
<CustomField>
    <fullName>User_URL__c</fullName>
    <formula>&apos;/one/one.app?#/sObject/&apos; +  OwnerId  + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User URL</label>
    <type>Text</type>
</CustomField>